--- a/foodweb.html
+++ b/foodweb.html
@@ -18,7 +18,7 @@
     </div>
 
     <nav class="header-right">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       
       <a href="contect.html">Contact</a>
     </nav> 
